v091
   - reverted to allowing duplicate images each with their own alt tag per link
   - Fix bug in Alt Text Editor cancel not actually canceling the image alt text updates

v090 - Beta
  - completely removed the  use of the Tk graphical user interface for image
    alt text editing becasue Tk and Pillow have no support for pure svg images.
    
    To replace it, The Qt for Python graphical user interface as provided by
    PySide6 (for Qt6) and PyQt5 (for Qt5) is used instead.  The resulting Qt
    based Alt Text Editing dialog is much improved and much more stable.

    As a result the new minimum supported version of Sigil is ***Sigil 1.60 or later***

  - if the OPF package tag does not have an xml:lang element to indicate the primary
    language of its metadata tags, one is now added based the primary epub dc:language

v055
  - add workaround for parsing glitch in quickparser

v054
  - add schema:accessibilityHazard metadata now required by the ACE Checker

v053
  - fix thumbnail scaling bug for wide but thin images that get truncated to 0 pixels in height
  
v052
  - no longer consider whitespace alone a valid xhtml title
  - properly look for and handle self-closed title tags in head when looking
       to replace titles
  - work around for quickparser.py serialization bug in Sigil v1.4.3 and earlier
  - no longer strip region off dc:language code
  - fix Windows specific bug when epub files use mix case

v051
  - fix leftover typo that could cause a bug

v050
  - update Access-Aide to work with the new Sigil 1.0 plugin interface
  - adds ability to run on non-Sigil standard epub layouts
  - should still work just fine with Sigil version before Sigil-0.9.991

v043
  - include updates to accessgui.py that were somehow dropped
  - update plugin.py to not add epub:type attributes to the body tag as this is somehow now taboo
v042
  - use epub 3.0.2/3.2 rules for mapping epub types to aria roles to keep
    future epubcheck versions happy
v041